--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -42,10 +42,7 @@
     <mj-section padding="24px 30px" mj-class="bgT1">
       <mj-group>
         <mj-column vertical-align="middle">
-          <mj-image align="left" padding="0" width="130px" src="./images/netgearWhite.png" alt="logo Netgear"/>
-        </mj-column>
-        <mj-column vertical-align="middle">
-          <mj-text align="right" padding="0" mj-class="T9-400" color="#ababab" text-transform="uppercase" letter-spacing="2px"><a style="text-decoration:none;color:#ababab;" href="#">version en ligne&nbsp;&#x23f5;</a></mj-text>
+          <mj-image align="left" padding="0" width="145px" src="./images/logoNetgearWhite.png" alt="logo Netgear"/>
         </mj-column>
       </mj-group>
     </mj-section>
