petites corrections pug bloc footer

--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -6,7 +6,7 @@ mj-section
         mj-text be.rapidresponse@netgear.com ou lu.rapidresponse@netgear.com
         mj-text Netgear Belgium - Regus Brussels Airport - Pegasuslaan 5 - Diegem 1831 - Belgium 
         mj-social
-            mj-social-element name="facebook" href="https://www.facebook.com/NETGEARBE" />
-            mj-social-element name="twitter" href="https://twitter.com/NETGEARBE" />
-            mj-social-element name="linkedin" href="https://www.linkedin.com/company/netgearbe/" />
+            mj-social-element(name="facebook" href="https://www.facebook.com/NETGEARBE")
+            mj-social-element(name="twitter" href="https://twitter.com/NETGEARBE")
+            mj-social-element(name="linkedin" href="https://www.linkedin.com/company/netgearbe/")
     
