--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -110,9 +110,9 @@
         <mj-text>be.rapidresponse@netgear.com ou lu.rapidresponse@netgear.com</mj-text>
         <mj-text>Netgear Belgium - Regus Brussels Airport - Pegasuslaan 5 - Diegem 1831 - Belgium </mj-text>
         <mj-social>
-          <mj-social-element>name="facebook" href="https://www.facebook.com/NETGEARBE" /></mj-social-element>
-          <mj-social-element>name="twitter" href="https://twitter.com/NETGEARBE" /></mj-social-element>
-          <mj-social-element>name="linkedin" href="https://www.linkedin.com/company/netgearbe/" /></mj-social-element>
+          <mj-social-element name="facebook" href="https://www.facebook.com/NETGEARBE"></mj-social-element>
+          <mj-social-element name="twitter" href="https://twitter.com/NETGEARBE"></mj-social-element>
+          <mj-social-element name="linkedin" href="https://www.linkedin.com/company/netgearbe/"></mj-social-element>
         </mj-social>
       </mj-column>
     </mj-section>
