réalisation du tableau du bloc prod01

--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -1,10 +1,10 @@
 //-footer
-mj-section 
+mj-section(mj-class="bgW")
     mj-column
-        mj-text Contact us
-        mj-text +32 (0)2 709 23 00
-        mj-text be.rapidresponse@netgear.com ou lu.rapidresponse@netgear.com
-        mj-text Netgear Belgium - Regus Brussels Airport - Pegasuslaan 5 - Diegem 1831 - Belgium 
+        mj-text(align="center") Contact us
+        mj-text(align="center") +32 (0)2 709 23 00
+        mj-text(align="center") be.rapidresponse@netgear.com ou lu.rapidresponse@netgear.com
+        mj-text(align="center") Netgear Belgium - Regus Brussels Airport - Pegasuslaan 5 - Diegem 1831 - Belgium
         mj-social
             mj-social-element(name="facebook" href="https://www.facebook.com/NETGEARBE")
             mj-social-element(name="twitter" href="https://twitter.com/NETGEARBE")
