--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -1,7 +1,7 @@
-mj-section 
+mj-section(background-color="#f6f6f6" padding="0") 
     mj-column
-        mj-text As alternatives we have our Fully Managed Switches (M4500, M4300 & m4250 series).
-        mj-text Need help in finding the correct alternative?
+        mj-text(align="left" mj-class="T24-300 cT1") As alternatives we have our #[span(style="font-weight:500;") Fully Managed Switches (M4500, M4300 & m4250 series)].
+        mj-text(align="left" mj-class="T24-300 cT1") Need help in finding the correct alternative?
         mj-button contact per mail
         mj-button contact per phone
     mj-column
