--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -2,26 +2,26 @@
 mj-section(padding="0")
     mj-column
         mj-image(padding="0" width="700px" src="./images/CTA.jpg" alt="")/
-mj-section
+mj-section(mj-class="bgW")
     mj-column
-        mj-table
+        mj-table(mj-class="T15-300")
             tr
-                td Information product
-                td End of life date
-                td End of sale date
+                th(style="padding:5px;text-align:center;border:1px dashed #000000;text-transform:uppercase;") #[strong Information product]
+                th(style="padding:5px;text-align:center;border:1px dashed #000000;text-transform:uppercase;") #[strong End of life date]
+                th(style="padding:5px;text-align:center;border:1px dashed #000000;text-transform:uppercase;") #[strong End of sale date]
+            tr(style="background-color:#f1f1f1;")
+                td(style="padding:5px;border:1px dashed #000000;") #[strong S3300-52X (GS752TX)]
+                td(style="padding:5px;text-align:center;border:1px dashed #000000;") May 18th 2021
+                td(style="padding:5px;text-align:center;border:1px dashed #000000;") August 31st 2021
             tr
-                td S3300-52X (GS752TX)
-                td May 18th 2021
-                td August 31st 2021
+                td(style="padding:5px;border:1px dashed #000000;") #[strong S3300-52X-PoE+ (GS752TXP)]
+                td(style="padding:5px;border:1px dashed #000000;text-align:center;") May 18th 2021
+                td(style="padding:5px;border:1px dashed #000000;text-align:center;") August 31st 2021
+            tr(style="background-color:#f1f1f1;")
+                td(style="padding:5px;border:1px dashed #000000;") #[strong S3300-28X (GS728TX)]
+                td(style="padding:5px;text-align:center;border:1px dashed #000000;") November 8th 2021
+                td(style="padding:5px;text-align:center;border:1px dashed #000000;") December 31st 2021
             tr
-                td S3300-52X-PoE+ (GS752TXP)
-                td May 18th 2021
-                td August 31st 2021
-            tr
-                td S3300-28X (GS728TX)
-                td November 8th 2021
-                td December 31st 2021
-            tr
-                td S3300-28X-PoE+ (GS728TXP)
-                td November 8th 2021
-                td December 31st 2021
+                td(style="padding:5px;border:1px dashed #000000;") #[strong S3300-28X-PoE+ (GS728TXP)]
+                td(style="padding:5px;text-align:center;border:1px dashed #000000;") November 8th 2021
+                td(style="padding:5px;text-align:center;border:1px dashed #000000;") December 31st 2021
