--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -61,13 +61,13 @@
         <mj-image padding="0" width="700px" src="./images/CTA.jpg" alt=""/>
       </mj-column>
     </mj-section>
-    <mj-section mj-class="bgW">
+    <mj-section mj-class="bgW" padding="20px">
       <mj-column>
-        <mj-table mj-class="T15-300">
+        <mj-table mj-class="T15-300" padding="0" cellpadding="0" cellspacing="0">
           <tr>
-            <th style="padding:5px;text-align:center;border:1px dashed #333333;text-transform:uppercase;"><strong>Information product</strong></th>
-            <th style="padding:5px;text-align:center;border:1px dashed #333333;text-transform:uppercase;"><strong>End of life date</strong></th>
-            <th style="padding:5px;text-align:center;border:1px dashed #333333;text-transform:uppercase;"><strong>End of sale date</strong></th>
+            <th style="padding:5px;text-align:center;text-transform:uppercase;"><strong>Information product</strong></th>
+            <th style="padding:5px;text-align:center;text-transform:uppercase;"><strong>End of life date</strong></th>
+            <th style="padding:5px;text-align:center;text-transform:uppercase;"><strong>End of sale date</strong></th>
           </tr>
           <tr style="background-color:#f1f1f1;">
             <td style="padding:5px;border:1px dashed #333333;"><strong>S3300-52X (GS752TX)</strong></td>
