--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -1,8 +1,9 @@
 mj-section(background-color="#f6f6f6" padding="0") 
-    mj-column
-        mj-text(align="left" mj-class="T24-300 cT1") As alternatives we have our #[span(style="font-weight:500;") Fully Managed Switches (M4500, M4300 & m4250 series)].
-        mj-text(align="left" mj-class="T24-300 cT1") Need help in finding the correct alternative?
-        mj-button contact per mail
-        mj-button contact per phone
+    mj-column(padding="20px 30px 10px 20px")
+        mj-text(padding="0" align="left" mj-class="T24-300 cT1") As alternatives we have our #[span(style="font-weight:500;") Fully Managed Switches (M4500, M4300 & m4250 series)].
+        mj-text(padding="0" align="left" mj-class="T24-300 cT1") Need help in finding the correct alternative&nbsp;?
+        mj-spacer(height="15px")/
+        mj-button(padding-top="10px" inner-padding="12px 20px" color="#ffffff" text-transform="uppercase" text-decoration="none" background-color="#73389B" href="#") #[strong contact per mail]
+        mj-button(padding-top="10px" inner-padding="12px 20px" color="#ffffff" text-transform="uppercase" text-decoration="none" background-color="#73389B" href="#") #[strong contact per phone]
     mj-column
         mj-image(padding="0" width="350px" src="./images/imageBranchement.jpg" alt="")/
