finalisation du bloc header

--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -1,7 +1,7 @@
 //-Header
-mj-section(padding="0")
+mj-section(mj-class="bgT1" padding="20px 40px")
     mj-column
-        mj-text S3300 End-of-Life / End-of-Sale Bulletin Contact NETGEAR for your alternative
+        mj-text(padding="0" align="center" mj-class="T30-300 cTW") S3300 End-of-Life / End-of-Sale Bulletin Contact NETGEAR for your alternative
 mj-section(padding="0")
     mj-column
         mj-image(padding="0" width="700px" src="./images/GammeS3300.jpg" alt="")/
