--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -46,9 +46,9 @@
         </mj-column>
       </mj-group>
     </mj-section>
-    <mj-section padding="0">
+    <mj-section mj-class="bgT1" padding="20px 40px">
       <mj-column>
-        <mj-text>S3300 End-of-Life / End-of-Sale Bulletin Contact NETGEAR for your alternative</mj-text>
+        <mj-text padding="0" align="center" mj-class="T30-300 cTW">S3300 End-of-Life / End-of-Sale Bulletin Contact NETGEAR for your alternative</mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="0">
