--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -1,11 +1,12 @@
 //-footer
 mj-section(mj-class="bgW")
     mj-column
-        mj-text(align="center") Contact us
-        mj-text(align="center") +32 (0)2 709 23 00
-        mj-text(align="center") be.rapidresponse@netgear.com ou lu.rapidresponse@netgear.com
-        mj-text(align="center") Netgear Belgium - Regus Brussels Airport - Pegasuslaan 5 - Diegem 1831 - Belgium
-        mj-social
+        mj-text(padding="0" padding-bottom="15px" align="center" mj-class="T18-500") Contact us
+        mj-text(padding="0" align="center" mj-class="T14-300") +32 (0)2 709 23 00
+        mj-text(padding="0" align="center" mj-class="T14-300") be.rapidresponse@netgear.com ou lu.rapidresponse@netgear.com
+        mj-text(padding="0" align="center" mj-class="T14-300") Netgear Belgium - Regus Brussels Airport - Pegasuslaan 5 - Diegem 1831 - Belgium
+        mj-spacer(height="28px")/
+        mj-social()
             mj-social-element(name="facebook" href="https://www.facebook.com/NETGEARBE")
             mj-social-element(name="twitter" href="https://twitter.com/NETGEARBE")
             mj-social-element(name="linkedin" href="https://www.linkedin.com/company/netgearbe/")
