--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -22,7 +22,7 @@
       <mj-class name="T20-300" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="20px" line-height="35px" font-weight="300"/>
       <mj-class name="T18-500" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="18px" line-height="25px" font-weight="500"/>
       <mj-class name="T17-500" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="17px" line-height="24px" font-weight="500"/>
-      <mj-class name="T15-500" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="15px" line-height="22px" font-weight="500"/>
+      <mj-class name="T14-300" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="14px" line-height="21px" font-weight="300"/>
       <mj-class name="T16-500" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="20px" font-weight="500"/>
       <mj-class name="T15-300" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="15px" line-height="18px" font-weight="300"/>
       <mj-class name="T12-400" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="12px" line-height="13px" font-weight="400"/>
@@ -106,10 +106,11 @@
     </mj-section>
     <mj-section mj-class="bgW">
       <mj-column>
-        <mj-text align="center">Contact us</mj-text>
-        <mj-text align="center">+32 (0)2 709 23 00</mj-text>
-        <mj-text align="center">be.rapidresponse@netgear.com ou lu.rapidresponse@netgear.com</mj-text>
-        <mj-text align="center">Netgear Belgium - Regus Brussels Airport - Pegasuslaan 5 - Diegem 1831 - Belgium</mj-text>
+        <mj-text padding="0" padding-bottom="15px" align="center" mj-class="T18-500">Contact us</mj-text>
+        <mj-text padding="0" align="center" mj-class="T14-300">+32 (0)2 709 23 00</mj-text>
+        <mj-text padding="0" align="center" mj-class="T14-300">be.rapidresponse@netgear.com ou lu.rapidresponse@netgear.com</mj-text>
+        <mj-text padding="0" align="center" mj-class="T14-300">Netgear Belgium - Regus Brussels Airport - Pegasuslaan 5 - Diegem 1831 - Belgium</mj-text>
+        <mj-spacer height="28px"/>
         <mj-social>
           <mj-social-element name="facebook" href="https://www.facebook.com/NETGEARBE"></mj-social-element>
           <mj-social-element name="twitter" href="https://twitter.com/NETGEARBE"></mj-social-element>
