travail sur les icons des réseaux sociaux bloc footer

--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -2,12 +2,11 @@
 mj-section(mj-class="bgW")
     mj-column
         mj-text(padding="0" padding-bottom="15px" align="center" mj-class="T18-500") Contact us
-        mj-text(padding="0" align="center" mj-class="T14-300") +32 (0)2 709 23 00
-        mj-text(padding="0" align="center" mj-class="T14-300") be.rapidresponse@netgear.com ou lu.rapidresponse@netgear.com
-        mj-text(padding="0" align="center" mj-class="T14-300") Netgear Belgium - Regus Brussels Airport - Pegasuslaan 5 - Diegem 1831 - Belgium
+        mj-text(padding="0" align="center" mj-class="T14-300 cT1") #[a(style="text-decoration:none;color:#2c262d" href="tel:+32027092300") +32 (0)2 709 23 00]
+        mj-text(padding="0" align="center" mj-class="T14-300 cT1") #[a(style="text-decoration:none;color:#2c262d" href="mailto:be.rapidresponse@netgear.com") be.rapidresponse@netgear.com] ou #[a(style="text-decoration:none;color:#2c262d" href="mailto:lu.rapidresponse@netgear.com") lu.rapidresponse@netgear.com]
+        mj-text(padding="0" align="center" mj-class="T14-300 cT1") Netgear Belgium - Regus Brussels Airport - Pegasuslaan 5 - Diegem 1831 - Belgium
         mj-spacer(height="28px")/
-        mj-social()
-            mj-social-element(name="facebook" href="https://www.facebook.com/NETGEARBE")
-            mj-social-element(name="twitter" href="https://twitter.com/NETGEARBE")
-            mj-social-element(name="linkedin" href="https://www.linkedin.com/company/netgearbe/")
-    
+        mj-social(mode="horizontal" padding="0" align="center" icon-padding="2.5px")
+            mj-social-element(padding="0" icon-size="35px" src="./images/facebook062025.png" href="https://www.facebook.com/NETGEARBE")
+            mj-social-element(padding="0" icon-size="35px" src="./images/twitter062025.png" href="https://twitter.com/NETGEARBE")
+            mj-social-element(padding="0" icon-size="35px" src="./images/linkedin062025.png" href="https://www.linkedin.com/company/netgearbe/")
